fix: layout bug tablet

--- a/styles/curso/curso.module.scss
+++ b/styles/curso/curso.module.scss
@@ -90,7 +90,7 @@
 			display: flex;
 			flex-direction: column;
 			gap: 20px;
-			@media screen and (min-width: 800px) {
+			@media screen and (min-width: 801px) {
 				flex-direction: row;
 			}
 			.card {
